src/components/SideNaveToggle/styles.scss
.toggle-container {
  width: 56px;
  box-shadow: 0 2px 4px 0 rgba(34,36,38,.12),0 2px 10px 0 rgba(34,36,38,.15);
  transition: 0.4s;
  background-color: white;
  height: 100vh;
  overflow: hidden;
  position: absolute;
  z-index: 99999999999999;
  margin-top: 2px;
  .svgHover {
    path {
      fill: #59c4c4;
    }
  }
  .teal.active.item {
    color: #59c4c4;
    border-left: 5px solid #59c4c4 !important;
    border-bottom: 1px solid #eaedf0 !important;
    font-weight: 600;
    background-color: #eef9f9 !important;

    .iconWithStyle {
      margin: 0em 1em 0em 0.35em;
    }
    .teamIconStyle {
      margin: 0em 1em 0em 0.32em;
    }
    .cogIconStyle {
      margin-left: 7px;
    }

    svg {
      path {
        fill: #59c4c4;
      }
    }
  }
  a {
    font-family: 'Open Sans', sans-serif;
    border-bottom: 1px solid #eaedf0 !important;
    svg {
      font-size: 17px;
    }
  }
  .noDropdown {
    .menu {
      padding-top: 11px;
      border-bottom: 1px solid #eaedf0;
    }
    a {
      color: #3b3b3b !important;
      border-bottom: none !important;
    }

    .teal.active.item {
      border-left: none !important;
      border-bottom: 1px solid white !important;
      font-weight: 600 !important;
      background-color: #ffffff !important;
      color: #3b3b3b !important;
    }
  }
  .ui.vertical.steps{
      width:240px;
      padding:0px;
      margin-left:-1px;
      margin-top: -1px;
      .step:after{
        display:none;
      }
      .step{
        height:56px;
        padding:0px;
        border-bottom:1px solid #eaedf0;
        svg{
          margin-left:8px;
        }
        .title{
          font-weight:400;
          font-family: 'Open Sans', sans-serif;
          color:rgba(0,0,0,.6)
        }
      }

    .active{
      border-radius:0px;
      padding:0px;
      color: #59c4c4;
      border-left: 5px solid #59c4c4 !important;
      border-bottom: 1px solid #eaedf0 !important;
      font-weight: 600;
      background-color: #eef9f9 !important;
      svg {
        margin-left:3px;
      }
      #step1Path, #step2Path, #step3Path, #step4Path {
        fill: #59c4c4;
      }  
      .title{
        font-weight:600;
        color:#59c4c4
      }
    }
  }
}

.active.item {
  border-left: none !important;
  border-bottom: none !important;
  font-weight: 600 !important;
  background-color: none !important;
  color: #525252 !important;
}

.expand {
  width: 225px;
}

.noDropdown {
  transition: 0.2s;
  height: 0px;
  overflow: hidden;
}

.accordionDrop,
.accordionDropCustom {
  height: 60px;
  width: 100%;
  overflow: visible;
}
.ui.text.menu {
  margin: 0em -1.25em;
}

@media screen and (max-width: 599px) {
  .accordionDrop,
  .accordionDropCustom {
    margin-top: 0px;
  }
  .ui.text.menu {
    margin-left: -2px !important;
  }
}

.pushable {
  overflow-x: visible;
}

.ui.sidebar {
  overflow-y: visible !important;
}

.ui-menu {
  display: flex !important;
}

.ui.text.menu {
  display: block !important;
  margin-left: 0px;
}

.ui.accordion .title:not(.ui) {
  padding: 0px;
}

.iconWithStyle {
  margin: 0em 1em 0em 0.65em;
}

.teamIconStyle {
  margin: 0em 1em 0em 0.6em;
  width: 20px !important;
}

.ui.menu .teal.active.item {
  border-bottom: none !important;
}

.ui.icon.menu .item {
  text-align: left;
}

.ismobile {
  -webkit-box-shadow: 2px 2px 6px 0px rgba(50, 50, 50, 0.14);
  -moz-box-shadow: 2px 2px 6px 0px rgba(50, 50, 50, 0.14);
  box-shadow: 2px 2px 6px 0px rgba(50, 50, 50, 0.14);
}

.cogIconStyle {
  width: 15px;
  height: 20px;
  margin-left: 12px;
  margin-top: 17px;
}

.ui.menu .teal.active.item {
  border-color: #59c4c4 !important;
  color: #59c4c4 !important;
}

